Fix side content to not stretch. Add hover effects

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   --light-1: #ffffff;
   --light-2: #f5f5f5;
   --dark-1: #222;
-  --dark-2: #666;
+  --dark-2: #555;
   --shadow: #ddd;
   --accent-1: #fffb00;
   --accent-2: #fffd97;
@@ -39,17 +39,55 @@ li {
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: var(--light-2);
+  color: var(--dark-1);
+}
+
+h1 {
+  font-weight: 700;
+  font-style: normal;
+}
+
+/* ELEMENTS */
+.app-button {
+  width: 96px;
+  height: 2rem;
+  border-radius: var(--rad-1);
+  border: none;
+  font-size: 100%;
+  background-color: var(--light-1);
+  box-shadow: -2px -2px 4px var(--shadow);
+  transition: 200ms;
+}
+
+.app-button:hover {
+  /* background-color: var(--secondary); */
+  box-shadow: -4px -4px 4px var(--shadow), 1px 1px 4px var(--light-1);
+}
+
+.card {
+  background-color: var(--light-1);
+  padding: calc(var(--pad) / 2) var(--pad);
+  border-radius: var(--rad-2);
+  box-shadow: 2px 2px 4px var(--shadow);
 }
 
 .emoji {
   font-family: 'Noto Emoji', sans-serif;
+  box-shadow: 2px 2px 2px #eee;
+  border-radius: 50%;
+  padding: 0.25rem;
+}
+
+.user-icon {
+  background-color: var(--accent-1);
+  border: none;
 }
 
 /* LAYOUT */
 .container {
   display: grid;
   grid-template-columns: 220px 1fr;
-  grid-template-rows: 7rem 1fr;
+  grid-template-rows: auto 1fr;
   grid-template-areas:
     "sidebar header"
     "sidebar content"
@@ -82,9 +120,7 @@ body {
 
 .header {
   padding: var(--pad);
-  /* background-color: #b7b7b7; */
   grid-area: header;
-
   display: flex;
   flex-direction: column;
   gap: var(--gap);
@@ -94,13 +130,14 @@ body {
   display: flex;
   gap: 8px;
   align-items: center;
+  font-weight: bold;
 }
 
 .header-top #search {
   margin-right: auto;
   border-radius: var(--rad-1);
   border: none;
-  height: 1.25rem;
+  padding: 0.5rem 0.75rem;
   width: clamp(50px, 50%, 800px);
   background-color: var(--light-1);
   box-shadow: 2px 2px 4px var(--shadow);
@@ -122,9 +159,9 @@ body {
 
 .greeting .user-icon {
   grid-area: 1 / 1 / 3 / 2;
-  background-color: var(--accent-1);
   width: 40px;
   height: 40px;
+  font-size: 1.5rem;
   border-radius: 50%;
   display: grid;
   place-items: center;
@@ -136,22 +173,25 @@ body {
 }
 
 .content {
-  /* background-color: #ddd; */
   grid-area: content;
   display: grid;
   grid-template-columns: 3fr 1fr;
-  grid-template-areas: 
-    "projects announcements"
-    "projects trending"
-  ;
   gap: var(--gap);
   padding: var(--pad);
+  padding-top: 0;
 }
 
-.content > div {
-  display: grid;
-  grid-template-rows: auto 1fr;
-  gap: 8px;
+.content-side {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap);
+}
+
+.projects,
+.content-side > div {
+  display: flex;
+  flex-direction: column;
+  gap: calc(var(--gap) / 2);
 }
 
 .content h2 {
@@ -163,18 +203,10 @@ body {
   margin-bottom: 8px;
 }
 
-.projects {
-  grid-area: projects;
-}
-
 .projects-cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: var(--gap);
-}
-
-.announcements {
-  grid-area: announcements;
 }
 
 .announcements-card {
@@ -192,10 +224,6 @@ body {
   margin-bottom: 4px;
 }
 
-.trending {
-  grid-area: trending;
-}
-
 .trending .card {
   display: grid;
   gap: 8px;
@@ -210,7 +238,7 @@ body {
 .trending-icon {
   width: 40px;
   height: 40px;
-  background-color: black;
+  background-color: var(--accent-2);
   border-radius: 50%;
   flex: none;
 }
@@ -222,22 +250,17 @@ body {
 .trending-item .handle + p {
   font-size: 0.75rem;
   margin-top: 0.25rem;
+  color: var(--dark-2);
 }
 
-/* ELEMENTS */
-.app-button {
-  width: 96px;
-  height: 2rem;
-  border-radius: var(--rad-1);
-  border: none;
-  font-size: 100%;
-  background-color: var(--secondary);
-  box-shadow: 2px 2px 4px var(--shadow);
+/* animations */
+.side-bar menu li:hover a,
+.header a:hover {
+  text-decoration: underline;
 }
 
-.card {
-  background-color: var(--light-1);
-  padding: calc(var(--pad) / 2) var(--pad);
-  border-radius: var(--rad-2);
-  box-shadow: 2px 2px 4px var(--shadow);
+.side-bar menu li:hover .emoji,
+.header .emoji:hover  {
+  text-decoration: none;
+  box-shadow: -2px -2px 4px var(--shadow), 1px 1px 4px var(--light-1);
 }
